fix dark mode toggle hover behavior

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,6 +53,16 @@ a:hover {
     color: #fff;
 }
 
+#dark-mode-toggle {
+  border-bottom: 3px solid var(--maincolor);
+  color: inherit;
+  text-decoration: none;
+}
+#dark-mode-toggle:hover {
+    background-color: var(--hovercolor);
+    color: #fff;
+}
+
 ul {
   list-style: none;
   padding-left: 2ch;
